--- a/index.html
+++ b/index.html
@@ -45,6 +45,60 @@
                     </p>
                 </header>
 
+                <h2 id="W202445">Week of November 4-10, 2024</h2>
+
+                <ul>
+                    <li><strong>AP Release Candidate</strong> 0.5.1 RC2 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1305486269769580545">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> APBingo [<a href="apworlds.html#APBingo">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics A2: Grimoire of the Rift [<a href="apworlds.html#FinalFantasyTacticsA2GrimoireOfTheRift">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> FlipWitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Guild Wars 2 [<a href="apworlds.html#GuildWars2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project Diva Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDivaMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 2 (Remake) [<a href="apworlds.html#ResidentEvil2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sentinels of the Multiverse [<a href="apworlds.html#SentinelsOfTheMultiverse">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Simon Tatham's Portable Puzzle Collection [<a href="apworlds.html#SimonTathamsPortablePuzzleCollection">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> FlipWitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Guild Wars 2 [<a href="apworlds.html#GuildWars2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hatsune Miku: Project Diva Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDivaMegaMix">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 2 (Remake) [<a href="apworlds.html#ResidentEvil2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                </ul>
+                
+                <ul>
+                    <li><strong>New APWorld</strong> Donkey Kong Country 2: Diddy's Kong Quest [<a href="apworlds.html#DonkeyKongCountry2DiddysKongQuest">Link</a>]</li>
+                    <li><strong>New APWorld</strong> TEVI [<a href="apworlds.html#TEVI">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202444">Week of October 28 - November 3, 2024</h2>
 
                 <ul>
