--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (221)</h2>
+                <h2>APWorlds (223)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -114,6 +114,7 @@
                 <small><a href="#DontStarveTogether">Don't Starve Together (PC)</a></small>
                 <br />
                 <small>[Donkey Kong Franchise - Donkey Kong Country Series]</small>
+                <small>&emsp;<a href="#DonkeyKongCountry2DiddysKongQuest">Donkey Kong Country 2: Diddy's Kong Quest (SNES)</a></small>
                 <small>&emsp;<a href="#DonkeyKongCountry3DixieKongsDoubleTrouble">Donkey Kong Country 3: Dixie Kong's Double Trouble! (SNES)</a></small>
                 <small>[Donkey Kong Franchise - Others]</small>
                 <small>&emsp;<a href="#DiddyKongRacing">Diddy Kong Racing (N64)</a></small>
@@ -297,6 +298,7 @@
                 <small><a href="#StardewValley">Stardew Valley (PC)</a></small>
                 <small><a href="#Subnautica">Subnautica (PC)</a></small>
                 <small><a href="#Terraria">Terraria (PC)</a></small>
+                <small><a href="#TEVI">TEVI (PC)</a></small>
                 <small><a href="#TheBindingOfIssacRepentance">The Binding of Isaac: Repentance (PC)</a></small>
                 <small><a href="#TheGuardianLegend">The Guardian Legend (NES)</a></small>
                 <br/>
@@ -469,7 +471,7 @@
                 <h3><span id="ANIMALWELL"></span> ANIMAL WELL (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1238463626344665119/1305263300208230420">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
@@ -792,6 +794,13 @@
                 </ul>
 
                 <h2>Donkey Kong Franchise - Donkey Kong Country Series</h2>
+
+                <h3><span id="DonkeyKongCountry2DiddysKongQuest"></span> Donkey Kong Country 2: Diddy's Kong Quest (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1023381145565548646">Link</a>]</li>
+                </ul>
 
                 <h3><span id="DonkeyKongCountry3DixieKongsDoubleTrouble"></span><span id="DonkeyKongCountry3"></span> Donkey Kong Country 3: Dixie Kong's Double Trouble! (SNES)</h3>
 
@@ -2061,6 +2070,12 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148330488482767008">Link</a>]</li>
                 </ul>
 
+                <h3><span id="TEVI"></span> TEVI (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BlackSoulKnight/Tevi_Randomizer/releases">Link</a>]</li>
+                </ul>
+
                 <h3><span id="TheBindingOfIssacRepentance"></span> The Binding of Isaac: Repentance (PC)</h3>
 
                 <ul>
@@ -2119,8 +2134,7 @@
                 <h3><span id="TheLegendOfZeldaMajorasMask"></span><span id="MajorasMask"></span> The Legend of Zelda: Majora's Mask (N64/PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/LittlestCube/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Game Mod</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/releases">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/LittleCube-hax/MMRecompRando/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/seto10987/Majoras-Mask-AP-PopTracker-Pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/blob/master/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1064439510806564925">Link</a>]</li>
@@ -2210,6 +2224,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/IgnisUmbrae/TJE-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1204326236415856671/1305663707744964622">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1204326236415856671">Link</a>]</li>
                 </ul>
 
