--- a/apworlds.html
+++ b/apworlds.html
@@ -535,6 +535,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BurndiL/BalatroAP/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/graygooglitch/balatroap_poptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1217203888717828307">Link</a>]</li>
                 </ul>
 
@@ -2224,7 +2225,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/IgnisUmbrae/TJE-Archipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1204326236415856671/1305663707744964622">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/graygooglitch/Toejam-and-Earl-AP-Tracker">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1204326236415856671">Link</a>]</li>
                 </ul>
 
