--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Tracker</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
                     <li><strong>New Tracker</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
                 </ul>
 
