--- a/apworlds.html
+++ b/apworlds.html
@@ -75,6 +75,7 @@
                 <small><a href="#Aquaria">Aquaria (PC)</a></small>
                 <small><a href="#ArchipIDLE">ArchipIDLE (Web)</a></small>
                 <small><a href="#AstalonTearsOfTheEarth">Astalon: Tears of the Earth (PC)</a></small>
+                <small><a href="#Autopelago">Autopelago (PC)</a></small>
                 <small><a href="#Balatro">Balatro (PC)</a></small>
                 <small><a href="#BanjoTooie">Banjo-Tooie (N64)</a></small>
                 <small><a href="#Blasphemous">Blasphemous (PC)</a></small>
@@ -165,7 +166,7 @@
                 <small>&emsp;<a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC - 18+)</a></small>
                 <br />
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
-                <small><a href="#Increlution">Increlution (PC)</a></small>
+                <!-- <small><a href="#Increlution">Increlution (PC)</a></small> -->
                 <small><a href="#Inscryption">Inscryption (PC)</a></small>
                 <small><a href="#IntoTheBreach">Into the Breach (PC)</a></small>
                 <small><a href="#IttleDew2">Ittle Dew 2+ (PC)</a></small>
@@ -360,6 +361,9 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/APBingo/releases">Link</a>]</li>
+                    <li><strong>Client - Alternate</strong> [<a href="https://sephdb.github.io/APBingo-Web/bingoview.html">Link</a>]</li>
+                    <li><strong>Client - Alternate</strong> [<a href="https://cjmang.github.io/APBingoTracker/">Link</a>]</li>
+                    <li><strong>Client - Alternate</strong> [<a href="https://github.com/ObsidianMakerDevelopment/APBingoWeb-OBS">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252051532971638784">Link</a>]</li>
                 </ul>
 
@@ -445,6 +449,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/RyanCirincione/ArchipelagoATS/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/c/against-the-storm/p/ATS_for_AP_Team/Against_The_Storm_for_Archipelago/">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Chfou/ATS-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/RyanCirincione/ArchipelagoATS/blob/main/worlds/against_the_storm/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1250491355290140672">Link</a>]</li>
                 </ul>
@@ -529,6 +534,13 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ouro-dev/astalon-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/drtchops/Archipelago/blob/astalon/worlds/astalon/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211521722881286164">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Autopelago"></span> Autopelago (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game</strong> [<a href="https://github.com/airbreather/Autopelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1307517897194868768">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Balatro"></span> Balatro (PC)</h3>
@@ -997,7 +1009,7 @@
                 <h3><span id="FNaFWorld"></span><span id="FNAFWorld"></span> FNaF World (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1280258981906092032">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1262058847397220445">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1195152241250795590">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1187854264375193721">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1104088448127729704">Link</a>]</li>
@@ -1006,7 +1018,7 @@
                 <h3><span id="FreddyFazbearsPizzeriaSimulator"></span> Freddy Fazbear's Pizzeria Simulator (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1276327269995905055">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1280258981906092032">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
                 </ul>
 
@@ -1016,6 +1028,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Witchybun/FlipwitchAPClient/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/SomeLazyGamer/flipwitch_tracker/releases">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1179972168910639225">Link</a>]</li>
                 </ul>
 
@@ -1133,12 +1146,12 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593298247417929">Link</a>]</li>
                 </ul>
 
-                <h3><span id="Increlution"></span> Increlution (PC)</h3>
+                <!-- <h3><span id="Increlution"></span> Increlution (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/spineraks-org/ArchipelagoIncrelution/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1276680264768032778">Link</a>]</li>
-                </ul>
+                </ul> -->
 
                 <h3><span id="Inscryption"></span> Inscryption (PC)</h3>
 
@@ -2429,6 +2442,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Beta APWorld</strong> 2.0.x releases [<a href="https://github.com/SerpentAI/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SerpentAI/ZorkGrandInquisitorAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Zork%20Grand%20Inquisitor/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389493289648218">Link</a>]</li>
