--- a/apworlds.html
+++ b/apworlds.html
@@ -47,6 +47,7 @@
                     </p>
 
                     <p>
+                        <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
                         <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1733DtKxylcSmCxn216rOVkJNS-aezFu8nURRw86CjKc/edit?gid=58422002">Community-Maintained Google Sheet</a>
                     </p>
                 </header>
