--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 
                         News Archive <a href="archive2024.html">2024</a>
                     </p>
+
+                    <p>
+                        <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
+                    </p>
                 </header>
 
                 <h2 id="W202446">Week of November 11-17, 2024</h2>
