--- a/archive2024.html
+++ b/archive2024.html
@@ -43,6 +43,10 @@
 
                         News Archive <a href="archive2024.html">2024</a>
                     </p>
+
+                    <p>
+                        <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
+                    </p>
                 </header>
 
                 <h2>2024 Archive</h2>
