--- a/apworlds.html
+++ b/apworlds.html
@@ -52,7 +52,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (223)</h2>
+                <h2>APWorlds (225)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -74,6 +74,7 @@
                 <small><a href="#AnotherCrabsTreasure">Another Crab's Treasure (PC)</a></small>
                 <small><a href="#ApeEscape">Ape Escape (PSX)</a></small>
                 <small><a href="#Aquaria">Aquaria (PC)</a></small>
+                <small><a href="#Archipela-Go">Archipela-Go! (Android)</a></small>
                 <small><a href="#ArchipIDLE">ArchipIDLE (Web)</a></small>
                 <small><a href="#AstalonTearsOfTheEarth">Astalon: Tears of the Earth (PC)</a></small>
                 <small><a href="#Autopelago">Autopelago (PC)</a></small>
@@ -233,6 +234,7 @@
                 <small><a href="#Mindustry">Mindustry (PC)</a></small>
                 <small><a href="#Minecraft">Minecraft (PC)</a></small>
                 <small><a href="#MinecraftDig">Minecraft Dig (PC)</a></small>
+                <small><a href="#MinishootAdventures">Minishoot' Adventures (PC)</a></small>
                 <small><a href="#Minit">Minit (PC)</a></small>
                 <small><a href="#MonsterSanctuary">Monster Sanctuary (PC)</a></small>
                 <small><a href="#MuseDash">Muse Dash (PC)</a></small>
@@ -431,7 +433,7 @@
                 <h3><span id="ActRaiser"></span> ActRaiser (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1300291470665846886">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1310451292120023080">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1296683088566288488">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1295980708619227148">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1113529234800005181">Link</a>]</li>
@@ -517,6 +519,13 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/palex00/aquaria-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Aquaria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257452465272389687">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Archipela-Go"></span> Archipela-Go! (Android)</h3>
+
+                <ul>
+                    <li><strong>APWorld + App</strong> [<a href="https://github.com/aki665/react-native-archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1203890996794884126">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ArchipIDLE"></span> ArchipIDLE (Web)</h3>
@@ -705,6 +714,7 @@
 
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://www.wiki.ctjot.com/doku.php?id=multiworld">Link</a>]</li>
+                    <li><strong>Website (YAML + Patcher)</strong> [<a href="https://multiworld.ctjot.com/options/">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Anguirel86/Jets-of-Time-Tracker">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Anguirel86/Archipelago/blob/ctjot/worlds/ctjot/docs/multiworld_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1063559984148906035">Link</a>]</li>
@@ -733,6 +743,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Ars-Ignis/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Website (Patcher)</strong> [<a href="https://crystalisrandomizer.com/ap">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ars-Ignis/crystalis-randomizer-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Ars-Ignis/Archipelago/blob/crystalis/worlds/crystalis/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1041412559460389017">Link</a>]</li>
@@ -813,6 +824,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/pwkfisher/ap-dkc2-tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1023381145565548646">Link</a>]</li>
                 </ul>
 
@@ -921,6 +933,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Website (YAML + Patcher)</strong> [<a href="https://finalfantasyrandomizer.com/">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/haate/FFR_AP_autotracking/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Final%20Fantasy/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/917510025461776445">Link</a>]</li>
@@ -990,6 +1003,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Website (Patcher)</strong> [<a href="https://www.ffmqrando.net/Archipelago">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/D-Skye/ffmq-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Final%20Fantasy%20Mystic%20Quest/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192237281298362539">Link</a>]</li>
@@ -1489,7 +1503,7 @@
                 <h3><span id="MetroCUBEvania"></span> MetroCUBEvania (PICO-8)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/AmaziaTheAmazing/ap-metrocubevania/releases">Link</a>]</li>
+                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/ap-metrocubevania/ap-metrocubevania/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1259263968245977128">Link</a>]</li>
                 </ul>
 
@@ -1583,6 +1597,13 @@
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/KonoTyran/Minecraft_AP_Randomizer/releases/tag/v0.0.-2">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/837136185662111746">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Minishoot Adventures"></span> Minishoot' Adventures (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/TheNooodle/MinishootRandomizer/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1307687662798508113">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Minit"></span> Minit (PC)</h3>
