--- a/index.html
+++ b/index.html
@@ -49,6 +49,62 @@
                     </p>
                 </header>
 
+                <h2 id="W202447">Week of November 18-24, 2024</h2>
+
+                <ul>
+                    <li><strong>AP Release Candidate</strong> 0.5.1 RC3 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1309925708029624351">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ActRaiser [<a href="apworlds.html#ActRaiser">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Duke Nukem 3D: Atomic Edition [<a href="apworlds.html#DukeNukem3DAtomicEdition">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics A2: Grimoire of the Rift [<a href="apworlds.html#FinalFantasyTacticsA2GrimoireOfTheRift">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Simon Tatham's Portable Puzzle Collection [<a href="apworlds.html#SimonTathamsPortablePuzzleCollection">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> XCOM 2: War of the Chosen [<a href="apworlds.html#XCOM2WarOfTheChosen">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Zork: Grand Inquisitor [<a href="apworlds.html#ZorkGrandInquisitor">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Duke Nukem 3D: Atomic Edition [<a href="apworlds.html#DukeNukem3DAtomicEdition">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> XCOM 2: War of the Chosen [<a href="apworlds.html#XCOM2WarOfTheChosen">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Archipela-Go! [<a href="apworlds.html#Archipela-Go">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Donkey Kong Country 2: Diddy's Kong Quest [<a href="apworlds.html#DonkeyKongCountry2DiddysKongQuest">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202446">Week of November 11-17, 2024</h2>
 
                 <ul>
