--- a/index.html
+++ b/index.html
@@ -49,6 +49,71 @@
                     </p>
                 </header>
 
+                <h2 id="W202448">Week of November 25 - December 1, 2024</h2>
+
+                <ul>
+                    <li><strong>AP RELEASE</strong> 0.5.1 [<a href="https://github.com/ArchipelagoMW/Archipelago/releases/tag/0.5.1">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Archipela-Go! [<a href="apworlds.html#Archipela-Go">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Symphony of the Night [<a href="apworlds.html#CastlevaniaSymphonyOfTheNight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Crystalis [<a href="apworlds.html#Crystalis">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dome Keeper [<a href="apworlds.html#DomeKeeper">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kirby 64: The Crystal Shards [<a href="apworlds.html#Kirby64TheCrystalShards">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SpongeBob SquarePants: Battle For Bikini Bottom [<a href="apworlds.html#SpongeBobSquarePantsBattleForBikiniBottom">Link</a>]</li>
+                </ul>
+                
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda: Link's Awakening DX [<a href="apworlds.html#TheLegendOfZeldaLinksAwakeningDX">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Zork: Grand Inquisitor [<a href="apworlds.html#ZorkGrandInquisitor">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Cuphead [<a href="apworlds.html#Cuphead">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dome Keeper [<a href="apworlds.html#DomeKeeper">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Slay the Spire [<a href="apworlds.html#SlayTheSpire">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Golden Sun: The Lost Age [<a href="apworlds.html#GoldenSunTheLostAge">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Faxanadu [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3059">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Metroid Prime [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/4248">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202447">Week of November 18-24, 2024</h2>
 
                 <ul>
