--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                     <li><strong>APWorld Update</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                     <li><strong>APWorld Update</strong> SpongeBob SquarePants: Battle For Bikini Bottom [<a href="apworlds.html#SpongeBobSquarePantsBattleForBikiniBottom">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: A Link Between Worlds [<a href="apworlds.html#TheLegendOfZeldaALinkBetweenWorlds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
                 </ul>
                 
                 <ul>
@@ -100,6 +102,7 @@
 
                 <ul>
                     <li><strong>New APWorld</strong> Golden Sun: The Lost Age [<a href="apworlds.html#GoldenSunTheLostAge">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Touhou Koumakyou: The Embodiment of Scarlet Devil [<a href="apworlds.html#TouhouKoumakyouTheEmbodimentOfScarletDevil">Link</a>]</li>
                 </ul>
 
                 <ul>
