--- a/apworlds.html
+++ b/apworlds.html
@@ -409,6 +409,7 @@
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3026842601">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Mysteryem/ahit-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-Game Tracker </li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/A%20Hat%20in%20Time/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257453386073374842">Link</a>]</li>
                 </ul>
@@ -704,6 +705,7 @@
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Game Download</strong> [<a href="https://github.com/jonloveslegos/ChecksFinder/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-Game Tracker</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/ChecksFinder/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959282474746282014">Link</a>]</li>
                 </ul>
@@ -1300,7 +1302,7 @@
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Silvris/Kirby_Dream_Land_3_AP_Poptracker">Link</a>]</li>
-                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Partially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Kirby's%20Dream%20Land%203/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389195485806703">Link</a>]</li>
                 </ul>
@@ -1310,6 +1312,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/RunInAWeek/Kirby-64-Archipelago-Tracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1175344681928904806">Link</a>]</li>
                 </ul>
 
@@ -1468,6 +1471,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Universal Tracker - Officially Supported</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Silvris/Archipelago/blob/mm3/worlds/mm3/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1250369456048177152">Link</a>]</li>
                 </ul>
@@ -1749,7 +1753,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Tracker</strong> PopTracker Pack[<a href="https://github.com/seto10987/Archipelago-Emerald-AP-Tracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/Archipelago-Emerald-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Emerald/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
                 </ul>
@@ -1829,6 +1833,7 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Droppel/ReventureEndingRando/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/fhnnhf/reventure_tracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-Game Tracker</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Droppel/ReventureEndingRando/blob/main/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1200081144629174363">Link</a>]</li>
                 </ul>
@@ -1896,6 +1901,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/LeonarthCG/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/LeonarthCG/saving-princess-archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-Game Tracker</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/LeonarthCG/saving-princess-archipelago/blob/main/SETUP.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1234882000087941192">Link</a>]</li>
                 </ul>
@@ -2175,7 +2181,7 @@
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Beta APWorld</strong> [<a href="https://github.com/threeandthreee/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong>Website - Opened from the game client (Magpie button)</li>
+                    <li><strong>Tracker</strong> Website [<a href="https://magpietracker.us/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Links%20Awakening%20DX/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090819435893362768">Link</a>]</li>
                 </ul>
@@ -2201,7 +2207,8 @@
                 <h3><span id="TheLegendOfZeldaOracleOfAges"></span><span id="OracleOfAges"></span> The Legend of Zelda: Oracle of Ages (GBC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/SenPierre/ArchipelagoOoA/releases/latest">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1279722186902601750/1312234685325246515">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Br00ty/ooa_brooty/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/SenPierre/ArchipelagoOoA/blob/oos/worlds/tloz_ooa/docs/ooa_setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1279722186902601750">Link</a>]</li>
                 </ul>
@@ -2489,6 +2496,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Tracker</strong> In-Client Tracker</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Zillion/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593966131613736">Link</a>]</li>
                 </ul>
